--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=bike
+# Spring DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/bd?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=angienaye20
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#Spring Data JPA configuration
+spring.jpa.show-sql=true
+
+#Spring data JPA Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=com.tp.bike.platform.bike.shared.infraestructure.stategy.SnakeCasePhysicalNamingStrategy
