--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/bd?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=angienaye20
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
